--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,47 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <button ion-button (click)="startScanningForBeacons()" [disabled]="scanningInProgress">Start Scan</button>
+  <button ion-button (click)="stopScanningForBeacons()" [disabled]="!scanningInProgress">Stop Scan</button>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <ion-list *ngFor="let beacon of getBeaconList()">
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+
+
+    <ion-item *ngIf="beacon.voucherBeacon">
+      <ion-thumbnail item-start>
+        <img src="assets/imgs/ice.jpg">
+      </ion-thumbnail>
+      <h2>Gutschein</h2>
+      <p>Gratisglace vom SV</p>
+      <button ion-button clear item-end (click)="showVoucher()">Anzeigen</button>
+    </ion-item>
+
+    <ion-item *ngIf="beacon.paintingBeacon">
+      <ion-thumbnail item-start>
+        <img src="assets/imgs/blueberry.jpg">
+      </ion-thumbnail>
+      <h2>Gemälde Noname</h2>
+      <p>Höre die Geschichte zu diesem Gemälde</p>
+      <button ion-button clear item-end (click)="showPaintingInfo()">Lesen</button>
+      <button ion-button clear item-end (click)="playPaintingInfo()" *ngIf="!playingInProgress"><ion-icon name="play"></ion-icon></button>
+      <button ion-button clear item-end (click)="stopPaintingInfo()" *ngIf="playingInProgress"><ion-icon name="square"></ion-icon></button>
+    </ion-item>
+
+
+  </ion-list>
+
+
+
+  <!--<b>Beacon Instance</b>: {{beacon.instanceId}}<br>
+  <b>Beacon Address</b>: {{beacon.address}}<br>
+  <b>Timestamp</b>: {{beacon.timestamp}}<br/>
+  <b>Distance</b>: {{beacon.distance}}<br/><br/>
+  <button ion-button full *ngIf="beacon.voucherBeacon" (click)="showVoucher()">Gutschein anzeigen</button>
+  <button ion-button full *ngIf="beacon.paintingBeacon" (click)="showPaintingInfo()">Gemäldeinfos</button>
+  -->
+
+
+
+
 </ion-content>
