--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,47 +3,39 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Mobi Kunst Guide</ion-title>
   </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
-  <ion-list *ngFor="let beacon of getBeaconList()">
+  <ng-container *ngIf="nearestBeacon; else noBaconFound">
+    <img [src]="nearestBeacon.thumbnail">
+    <h2>{{nearestBeacon.objectTitle}}</h2>
+    <h2>{{nearestBeacon.objectPainter}}</h2>
+    <button ion-button clear item-end (click)="showPaintingInfo(nearestBeacon.objectURL)">Lesen</button>
+    <button ion-button clear item-end (click)="playPaintingInfo(nearestBeacon.objectId, nearestObject.soundFile)" *ngIf="!playingInProgress"><ion-icon name="play"></ion-icon></button>
+    <button ion-button clear item-end (click)="stopPaintingInfo(nearestBeacon.objectId)" *ngIf="playingInProgress"><ion-icon name="square"></ion-icon></button>
+  </ng-container>
 
-    <ion-item *ngIf="beacon.voucherBeacon">
-      <ion-thumbnail item-start>
-        <img src="assets/imgs/ice.jpg">
-      </ion-thumbnail>
-      <h2>Gutschein</h2>
-      <p>Gratisglace vom SV</p>
-      <button ion-button clear item-end (click)="showVoucher()">Anzeigen</button>
-    </ion-item>
-
-    <ion-item *ngIf="beacon.paintingBeacon">
-      <ion-thumbnail item-start>
-        <img src="assets/imgs/blueberry.jpg">
-      </ion-thumbnail>
-      <h2>Gemälde Noname</h2>
-      <p>Höre die Geschichte zu diesem Gemälde</p>
-      <button ion-button clear item-end (click)="showPaintingInfo()">Lesen</button>
-      <button ion-button clear item-end (click)="playPaintingInfo()" *ngIf="!playingInProgress"><ion-icon name="play"></ion-icon></button>
-      <button ion-button clear item-end (click)="stopPaintingInfo()" *ngIf="playingInProgress"><ion-icon name="square"></ion-icon></button>
-    </ion-item>
-
-
-  </ion-list>
-
-
-
-  <!--<b>Beacon Instance</b>: {{beacon.instanceId}}<br>
-  <b>Beacon Address</b>: {{beacon.address}}<br>
-  <b>Timestamp</b>: {{beacon.timestamp}}<br/>
-  <b>Distance</b>: {{beacon.distance}}<br/><br/>
-  <button ion-button full *ngIf="beacon.voucherBeacon" (click)="showVoucher()">Gutschein anzeigen</button>
-  <button ion-button full *ngIf="beacon.paintingBeacon" (click)="showPaintingInfo()">Gemäldeinfos</button>
-  -->
-
-
-
-
+  <ng-template #noBaconFound>
+    Kein Objekt in der Nähe.
+  </ng-template>
 </ion-content>
+
+<!--
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let beacon of getBeaconList()">
+      <ion-thumbnail item-start>
+        <img [src]="beacon.thumbnail">
+      </ion-thumbnail>
+      <h2>{{beacon.description}} {{beacon.instanceId}}</h2>
+      <p>Distanz: {{beacon.distance | number:'1.2-2'}} m</p>
+      <p>Temperatur: {{beacon.temperature}} ° C</p>
+      <p>Signalstärke: {{beacon.rssi}} dBm</p>
+      <p>Batterie: {{beacon.voltage / 1000 | number:'1.2-2'}} V</p>
+    </ion-item>
+  </ion-list>
+</ion-content>
+-->
